--- a/.env.example
+++ b/.env.example
@@ -1,154 +1,34 @@
 # ==============================================
-# MEAL PLANNER APP - ENVIRONMENT CONFIGURATION
-# ==============================================
-# Copy this file to .env and fill in your actual values
-# Never commit .env files to version control
-
-# ==============================================
 # FRONTEND ENVIRONMENT VARIABLES
 # ==============================================
+# Copy this file to frontend/.env.local and fill in your actual values
+# For backend configuration, see backend/.env.example
 
 # Supabase Configuration
-REACT_APP_SUPABASE_URL=https://your-project-id.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=your-supabase-anon-key
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # API Configuration
-REACT_APP_API_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3001
 
 # Application Environment
-REACT_APP_ENVIRONMENT=development
-REACT_APP_LOG_LEVEL=debug
+VITE_ENVIRONMENT=development
+VITE_LOG_LEVEL=debug
 
 # Feature Flags (optional)
-REACT_APP_ENABLE_AI_FEATURES=true
-REACT_APP_ENABLE_SHARING=true
-REACT_APP_ENABLE_WALMART_INTEGRATION=false
+VITE_ENABLE_AI_FEATURES=true
+VITE_ENABLE_SHARING=true
+VITE_ENABLE_WALMART_INTEGRATION=false
 
 # Analytics (optional)
-REACT_APP_GOOGLE_ANALYTICS_ID=
-REACT_APP_MIXPANEL_TOKEN=
-
-# ==============================================
-# BACKEND ENVIRONMENT VARIABLES
-# ==============================================
-
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-HOST=localhost
-
-# Supabase Configuration
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_KEY=your-supabase-service-role-key
-
-# OpenAI Configuration
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4
-OPENAI_MAX_TOKENS=2000
-OPENAI_TEMPERATURE=0.7
-
-# Security Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-CORS_ORIGIN=http://localhost:3000
-SESSION_SECRET=your-session-secret-key
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=100
-RATE_LIMIT_AI_MAX_REQUESTS=10
-
-# Database Configuration (if using direct connection)
-DATABASE_URL=postgresql://user:password@localhost:5432/meal_planner
-
-# Redis Configuration (optional, for caching)
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-REDIS_DB=0
-
-# Email Configuration (optional)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-FROM_EMAIL=noreply@yourdomain.com
-
-# File Upload Configuration
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
-
-# Walmart API Configuration (optional)
-WALMART_API_KEY=your-walmart-api-key
-WALMART_CLIENT_ID=your-walmart-client-id
-WALMART_CLIENT_SECRET=your-walmart-client-secret
-
-# ==============================================
-# MONITORING & LOGGING
-# ==============================================
-
-# Sentry Configuration (optional)
-SENTRY_DSN=your-sentry-dsn
-SENTRY_ENVIRONMENT=development
-
-# Logging Configuration
-LOG_LEVEL=debug
-LOG_FORMAT=combined
-LOG_FILE_PATH=./logs/app.log
-
-# Health Check Configuration
-HEALTH_CHECK_INTERVAL=30000
-HEALTH_CHECK_TIMEOUT=5000
-
-# ==============================================
-# DEVELOPMENT TOOLS
-# ==============================================
-
-# Hot Reload Configuration
-CHOKIDAR_USEPOLLING=false
-FAST_REFRESH=true
-
-# Debug Configuration
-DEBUG=meal-planner:*
-VERBOSE_LOGGING=true
-
-# Testing Configuration
-TEST_DATABASE_URL=postgresql://user:password@localhost:5432/meal_planner_test
-JEST_TIMEOUT=30000
-
-# ==============================================
-# PRODUCTION OVERRIDES
-# ==============================================
-# These should be set in your production environment
-# and will override the development values above
-
-# REACT_APP_SUPABASE_URL=https://prod-project.supabase.co
-# REACT_APP_SUPABASE_ANON_KEY=prod-anon-key
-# REACT_APP_API_URL=https://api.yourdomain.com
-# REACT_APP_ENVIRONMENT=production
-
-# SUPABASE_URL=https://prod-project.supabase.co
-# SUPABASE_SERVICE_KEY=prod-service-key
-# NODE_ENV=production
-# JWT_SECRET=super-secure-production-secret
-# CORS_ORIGIN=https://yourdomain.com
-# LOG_LEVEL=info
-
-# ==============================================
-# DEPLOYMENT SECRETS
-# ==============================================
-# These should only be set in your deployment platform
-# (Vercel, Railway, etc.) and never in local .env files
-
-# VERCEL_TOKEN=
-# RAILWAY_TOKEN=
-# GITHUB_TOKEN=
-# SLACK_WEBHOOK_URL=
+VITE_GOOGLE_ANALYTICS_ID=
+VITE_MIXPANEL_TOKEN=
 
 # ==============================================
 # NOTES
 # ==============================================
-# 1. Replace all placeholder values with your actual credentials
-# 2. Generate strong, unique secrets for JWT_SECRET and SESSION_SECRET
-# 3. Use environment-specific values for different deployment stages
-# 4. Keep your .env file secure and never commit it to version control
-# 5. Regularly rotate API keys and secrets
-# 6. Use your deployment platform's secret management for production
+# 1. This file is for FRONTEND environment variables only
+# 2. Backend environment variables are configured in backend/.env
+# 3. Copy this file to frontend/.env.local for local development
+# 4. Use VITE_ prefix for Vite environment variables
+# 5. Never commit .env files to version control
