--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.52.1",
     "@tanstack/react-query": "^5.83.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
@@ -20,7 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-router-dom": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
