--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,73 +1,41 @@
-# ==============================================
-# BACKEND ENVIRONMENT VARIABLES
-# ==============================================
-# Copy this file to .env and fill in your actual values
-# Never commit .env files to version control
-
 # Server Configuration
-PORT=3001
 NODE_ENV=development
-HOST=localhost
+PORT=3001
+LOG_LEVEL=INFO
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
 
 # Supabase Configuration
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_KEY=your-supabase-service-role-key
+SUPABASE_URL=your_supabase_url
+SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# OpenAI Configuration
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4
-OPENAI_MAX_TOKENS=2000
-OPENAI_TEMPERATURE=0.7
+# AWS S3 Configuration
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+S3_BUCKET_NAME=mealmate-images
+S3_BUCKET_REGION=us-east-1
 
-# Security Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-CORS_ORIGIN=http://localhost:3000
-SESSION_SECRET=your-session-secret-key
+# Image Processing
+MAX_IMAGE_SIZE=10485760
+SUPPORTED_IMAGE_FORMATS=jpeg,jpg,png,webp
+IMAGE_QUALITY=85
+
+# Recipe Parsing
+BROWSER_TIMEOUT=30000
+MAX_CONCURRENT_PARSERS=3
+PARSING_CACHE_TTL=3600
 
 # Rate Limiting
-RATE_LIMIT_WINDOW_MS=60000
+RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-RATE_LIMIT_AI_MAX_REQUESTS=10
 
-# Database Configuration (if using direct connection)
-DATABASE_URL=postgresql://user:password@localhost:5432/meal_planner
-
-# Redis Configuration (optional, for caching)
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-REDIS_DB=0
-
-# Email Configuration (optional)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-FROM_EMAIL=noreply@yourdomain.com
-
-# File Upload Configuration
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
-
-# Walmart API Configuration (optional)
-WALMART_API_KEY=your-walmart-api-key
-WALMART_CLIENT_ID=your-walmart-client-id
-WALMART_CLIENT_SECRET=your-walmart-client-secret
-
-# Monitoring & Logging
-SENTRY_DSN=your-sentry-dsn
-SENTRY_ENVIRONMENT=development
-LOG_LEVEL=debug
-LOG_FORMAT=combined
-LOG_FILE_PATH=./logs/app.log
-
-# Health Check Configuration
-HEALTH_CHECK_INTERVAL=30000
-HEALTH_CHECK_TIMEOUT=5000
-
-# Development Tools
-DEBUG=meal-planner:*
-VERBOSE_LOGGING=true
-
-# Testing Configuration
-TEST_DATABASE_URL=postgresql://user:password@localhost:5432/meal_planner_test
-JEST_TIMEOUT=30000
+# Social Media APIs (Future)
+FACEBOOK_APP_ID=your_facebook_app_id
+FACEBOOK_APP_SECRET=your_facebook_app_secret
+INSTAGRAM_CLIENT_ID=your_instagram_client_id
+INSTAGRAM_CLIENT_SECRET=your_instagram_client_secret
+TIKTOK_CLIENT_KEY=your_tiktok_client_key
+TIKTOK_CLIENT_SECRET=your_tiktok_client_secret
