--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.83.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.526.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
