--- a/backend/package.json
+++ b/backend/package.json
@@ -12,41 +12,49 @@
     "lint:fix": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["recipe", "parsing", "food", "meal-planning"],
+  "keywords": [
+    "recipe",
+    "parsing",
+    "food",
+    "meal-planning"
+  ],
   "author": "MealMate Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.38.5",
+    "aws-sdk": "^2.1506.0",
+    "cheerio": "^1.0.0-rc.12",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
-    "puppeteer": "^21.6.1",
-    "cheerio": "^1.0.0-rc.12",
-    "sharp": "^0.33.1",
-    "aws-sdk": "^2.1506.0",
-    "@supabase/supabase-js": "^2.38.5",
     "node-fetch": "^3.3.2",
-    "validator": "^13.11.0",
+    "puppeteer": "^21.6.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rate-limiter-flexible": "^2.4.2",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "sharp": "^0.33.1",
+    "user-agents": "^1.1.614",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.5",
     "@types/validator": "^13.11.7",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
