feat: implement Walmart grocery integration and update documentation
- Add Walmart deep link integration for one-click grocery shopping
- Create WalmartIntegrationService with mobile app support
- Add WalmartExportButton component with loading states
- Integrate Walmart button into SmartGroceryListView
- Fix GitHub Actions CI/CD workflows
- Update MVP readiness assessment (92% complete)
- Add comprehensive documentation for grocery store integrations

Files added:
- frontend/src/services/walmartIntegrationService.ts
- frontend/src/components/features/grocery/WalmartExportButton.tsx
- docs/WALMART_INTEGRATION_IMPLEMENTATION.md
- docs/GROCERY_STORE_API_INTEGRATION.md
- docs/GITHUB_ACTIONS_FIXES.md

Files modified:
- frontend/src/components/features/grocery/SmartGroceryListView.tsx
- docs/MVP_READINESS_ASSESSMENT.md
- .github/workflows/ci.yml
- .github/workflows/deploy.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: |
+            frontend/package-lock.json
+            backend/package-lock.json
 
       # Frontend Steps
       - name: Install frontend dependencies
@@ -46,12 +49,16 @@ jobs:
       - name: Test frontend
         run: |
           cd frontend
-          npm run test
+          npm run test:run
 
       - name: Build frontend
         run: |
           cd frontend
           npm run build
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL || 'https://placeholder.supabase.co' }}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY || 'placeholder-key' }}
+          VITE_API_URL: ${{ secrets.VITE_API_URL || 'http://localhost:3001' }}
 
       # Backend Steps
       - name: Install backend dependencies
@@ -91,6 +98,9 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
+          cache-dependency-path: |
+            frontend/package-lock.json
+            backend/package-lock.json
 
       - name: Install frontend dependencies
         run: |
